--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sb-admin-material",
-    "version": "7.0.0",
+    "version": "7.3.6",
     "scripts": {
         "ng": "ng",
         "start": "ng serve --progress",
@@ -30,7 +30,9 @@
         "core-js": "2.5.7",
         "hammerjs": "2.0.8",
         "ng2-charts": "1.6.0",
+        "node-sass": "^4.12.0",
         "rxjs": "6.3.3",
+        "sass-loader": "^7.1.0",
         "web-animations-js": "2.3.1",
         "zone.js": "0.8.26"
     },
