--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "7.1.0",
+        "@angular/animations": "^7.1.0",
         "@angular/cdk": "7.1.0",
         "@angular/common": "7.1.0",
         "@angular/compiler": "7.1.0",
@@ -30,7 +30,8 @@
         "core-js": "2.5.7",
         "hammerjs": "2.0.8",
         "ng2-charts": "1.6.0",
-        "node-sass": "^4.12.0",
+        "ngx-toastr": "^10.0.4",
+        "node-sass": "^4.0.0",
         "path": "^0.12.7",
         "rxjs": "6.3.3",
         "sass-loader": "^7.1.0",
@@ -38,9 +39,9 @@
         "zone.js": "0.8.26"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "0.10.6",
-        "@angular/cli": "7.0.6",
-        "@angular/compiler-cli": "7.1.0",
+        "@angular-devkit/build-angular": "^0.13.9",
+        "@angular/cli": "^7.3.9",
+        "@angular/compiler-cli": "^7.2.15",
         "@angular/language-service": "7.1.0",
         "@types/jasmine": "3.3.0",
         "@types/jasminewd2": "2.0.6",
